# libcommuni

./: .gitignore  CMakeLists.txt  conanfile.py
src/core/: CMakeLists.txt  irccommand.cpp  ircfilter.cpp
src/model/: CMakeLists.txt
src/util/: CMakeLists.txt  irccommandparser.cpp  irctextformat.cpp
